fix: adjust z-index value in slidebar component for improved layering

--- a/src/app/components/slidebar/slidebar.component.scss
+++ b/src/app/components/slidebar/slidebar.component.scss
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    z-index: 9999;
+    z-index: 999;
     padding-top: 2rem;
     left: -250px;
     transition: left 0.3s ease;
